<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_data"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/Blue_Gray_900"
        android:gravity="center"
        app:subtitle="@string/your_data_is"
        app:subtitleTextColor="@color/white"
        app:title="@string/welcome"
        app:titleTextColor="@color/white" />

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_below="@+id/toolbar_data"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="15dp"
          >


    <TextView
        android:id="@+id/txt_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/show_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_first"/>


    <TextView
        android:id="@+id/txt_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_below="@+id/show_first_name"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="25sp"/>


    <TextView
        android:id="@+id/show_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_lastname"
        />


    <TextView
        android:id="@+id/txt_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:layout_below="@+id/show_last_name"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/show_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_mobile"
        />


    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/show_mobile"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/show_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        />



    <TextView
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/show_email"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/show_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"/>
      </RelativeLayout>


</RelativeLayout>