<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreFragment"
    android:background="@color/Gray_700">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar_profile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/Blue_Gray_900">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:gravity="center"/>
  </androidx.appcompat.widget.Toolbar>


  <androidx.cardview.widget.CardView
      android:id="@+id/card_profile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/toolbar_profile"
      android:layout_marginLeft="15dp"
      android:layout_marginTop="15dp"
      android:layout_marginRight="15dp"
      >


  <TextView
      android:id="@+id/txt_prof"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/my_profile"
      android:textColor="@color/black"
      android:textSize="23sp"
      app:drawableStartCompat="@drawable/profile" />

  </androidx.cardview.widget.CardView>


  <androidx.cardview.widget.CardView
      android:id="@+id/card_language"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/card_profile"
      android:layout_marginLeft="15dp"
      android:layout_marginTop="15dp"
      android:layout_marginRight="15dp"
      >


    <TextView
        android:id="@+id/txt_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="23sp"
        app:drawableStartCompat="@drawable/lang"
        android:textColor="@color/black"/>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/card_language"
      android:layout_marginLeft="15dp"
      android:layout_marginTop="15dp"
      android:layout_marginRight="15dp"
      >


    <TextView
        android:id="@+id/txt_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textSize="23sp"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/power" />

  </androidx.cardview.widget.CardView>
</RelativeLayout>